[ATK] Wrong selected element at a given index in a list box. https://bugs.webkit.org/show_bug.cgi?id=129039

Reviewed by Chris Fleizach.

Source/WebCore:

Test: accessibility/select-element-at-index.html

The selected element at a given index was wrong. One should be considered among the
all children of a list box, not only selected ones.

* accessibility/atk/WebKitAccessibleInterfaceSelection.cpp:
(core):
(listObjectForSelection):
(optionFromList):
(optionFromSelection):
(webkitAccessibleSelectionRefSelection):

Tools:

Added missing implementation and proposed some new function for testing selection
in a list boxes.

* DumpRenderTree/AccessibilityUIElement.cpp:
(setSelectedChildAtIndexCallback):
(removeSelectionAtIndexCallback):
(AccessibilityUIElement::getJSClass):
* DumpRenderTree/AccessibilityUIElement.h:
* DumpRenderTree/atk/AccessibilityUIElementAtk.cpp:
(AccessibilityUIElement::selectedChildrenCount):
(AccessibilityUIElement::selectedChildAtIndex):
(AccessibilityUIElement::setSelectedChildAtIndex):
(AccessibilityUIElement::removeSelectionAtIndex):
* DumpRenderTree/win/AccessibilityUIElementWin.cpp:
(AccessibilityUIElement::selectedChildrenCount):
(AccessibilityUIElement::selectedChildAtIndex):
* WebKitTestRunner/InjectedBundle/AccessibilityUIElement.cpp:
(WTR::AccessibilityUIElement::setSelectedChildAtIndex):
(WTR::AccessibilityUIElement::removeSelectionAtIndex):
* WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h:
* WebKitTestRunner/InjectedBundle/Bindings/AccessibilityUIElement.idl:
* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::selectedChildAtIndex):
(WTR::AccessibilityUIElement::selectedChildrenCount):
(WTR::AccessibilityUIElement::setSelectedChildAtIndex):
(WTR::AccessibilityUIElement::removeSelectionAtIndex):

LayoutTests:

Proposed test that checks whether correct element at a given index is retrieved.
Also testing some other scenarios such as removing selection from rows, counting all
selected rows and setting selection.

* accessibility/select-element-at-index-expected.txt: Added.
* accessibility/select-element-at-index.html: Added.
* platform/mac/TestExpectations: Skipping test in Mac, missing implementation.


Canonical link: https://commits.webkit.org/147285@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164577 268f45cc-cd09-0410-ab3c-d52691b4dbfc